--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "proxy": "http://localhost:3000",
+  "proxy": "https://social-media-backend-phi-one.vercel.app/api/v1/users",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
