change to cloudinary

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-VITE_BACKEND_URL=http://localhost:3001/api/v1
+# VITE_BACKEND_URL=http://localhost:3001/api/v1
+VITE_BACKEND_URL=https://social-media-backend-phi-one.vercel.app/api/v1
+
+CLOUDINARY_NAME = dkuxfucb6
+CLOUDINARY_API_KEY = 833319162737854
+CLOUDINARY_API_SECRET = aaPxg6AfxQsI0SwTcmzsS092Cp4
